@@ -1,3 +1,8 @@
+2011-06-16  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* ImageSelection-test/ImageSelection-test.m: Also test NSButton's image
+	scaling
+
 2011-06-15  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* ImageSelection-test/ImageSelection-test.m: Test NSImageView scaling
